# bmp-loader

./: .gitignore  CMakeLists.txt  README.md  TODO.md  bmp.cpp  bmp.h  bmp_to_ascii.run.xml  main.cpp
bmp/: bmp.cpp  bmp.h  load.cpp  load.h  save.cpp  utils.cpp  utils.h
images/: test_output.txt
tests/: tests.cpp  tests.h
tests/test_images/: test_1bit_1.txt  test_1bit_2.txt  test_24bit_1.txt  test_32bit_1.txt  test_4bit_1.txt  test_8bit_1.txt
